# CS163-OurProject

./: CMakeLists.txt  report.docx
UIGame/: UIGame.sln
UIGame/test/: test.vcxproj
src/: CMakeLists.txt  Favorite.cpp  Favorite.h  History.cpp  History.h  Random.cpp  Random.h  Search.cpp  Search.h  SuffixArray.cpp  SuffixArray.h  TernarySearchTree.cpp  TernarySearchTree.h  VNSuffixArray.cpp  VNSuffixArray.h  addDialog.cpp  addDialog.h  dicType.cpp  dicType.h  dictionary.cpp  dictionary.h  favoritePage.cpp  favoritePage.h  frame.cpp  frame.h  gameDia1.cpp  gameDia1.h  gameDia2.cpp  gameDia2.h  gameDialog.cpp  gameDialog.h  gamePage.cpp  gamePage.h  historyPage.cpp  historyPage.h  mainPage.cpp  mainPage.h  searchPage.cpp  searchPage.h  searchType.cpp  (+3 more)
src/Data_Storage/Emoji/Current/: emoji_df.txt
src/Data_Storage/Emoji/Origin/: emoji_df.csv  emoji_df.txt
src/Data_Storage/Eng2Eng/Games/Words/: MediumMode.txt
src/Data_Storage/Eng2Eng/Origin/: 16.txt
src/Data_Storage/Eng2Viet/Games/Words/: EasyMode.txt
src/Data_Storage/Eng2Viet/Origin/: 10.txt
src/Data_Storage/Slang/Current/: slangs.txt
src/Data_Storage/Slang/Origin/: slangs.txt
